--- a/Assignment6/Web.config
+++ b/Assignment6/Web.config
@@ -77,6 +77,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ApplicationDbContext" connectionString="data source=DESKTOP-J4HUCHN;initial catalog=Assignment6DB;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ApplicationDbContext" connectionString="data source=.\sqlexpress;initial catalog=Assignment6DB;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
