--- a/Assignment6/Assignment6.csproj
+++ b/Assignment6/Assignment6.csproj
@@ -222,6 +222,8 @@
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
+    <Content Include="Views\Home\Tasks.cshtml" />
+    <Content Include="Views\Home\UsersRegistrations.cshtml" />
     <None Include="Views\Partials\_NavBarLoginLogout.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
