--- a/Assignment6/Assignment6.csproj
+++ b/Assignment6/Assignment6.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\RegistrationFacade.cs" />
     <Compile Include="Helpers\UsersLinksHelpers.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\DocumentAssign.cs" />
