--- a/Assignment6/Assignment6.csproj
+++ b/Assignment6/Assignment6.csproj
@@ -163,10 +163,10 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
+    <Compile Include="Factories\DocumentsFactory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\RegistrationFacade.cs" />
     <Compile Include="Helpers\UsersLinksHelpers.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\DocumentAssign.cs" />
@@ -273,7 +273,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Factories\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
