--- a/Assignment6/Assignment6.csproj
+++ b/Assignment6/Assignment6.csproj
@@ -163,6 +163,11 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
+    <Compile Include="Factories\ArchitectPendingDocuments.cs" />
+    <Compile Include="Factories\TesterPendingDocuments.cs" />
+    <Compile Include="Factories\ProgrammerPendingDocuments.cs" />
+    <Compile Include="Factories\AnalystPendingDocuments.cs" />
+    <Compile Include="Factories\PendingDocuments.cs" />
     <Compile Include="Factories\DocumentsFactory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
